[package]
name = "spore-dob-721"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faster-hex = { version = "0.9.0", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
molecule = { version = "0.7.5", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["serde_derive"] }
