[package]
name = "spore-dob-0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator = "*"

hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["serde_derive"] }

[dev-dependencies]
ckb-hash = "0.114"
ckb-types = "0.114"

[profile.release]
overflow-checks = true
strip = true
opt-level = 's'
lto = true
codegen-units = 1
